# Mitigating-Reasoning-LLM-Social-Bias

./: .gitignore  BBQ_evaluation.py  COT.py  LICENSE  README.md  answer_questions.py  bbq_with_judge.csv  bbq_with_judge1.csv  dataset_visualizer.py  distill-COT.py  download_model.py  evaluation.py  file.jsonl  filtered_output.jsonl  fit_and_score.17451003.err  fit_and_score.17451003.out  judge.jsonl  judge.py  new_job.slurm  phi4_judge.py  play.py  prompts.py  pyproject.toml  reasoning_steps.jsonl  set_up.sh
BBQ/: BBQ_evaluation.py  cot_checkpoint.json  dataset_visualizer.py  prompts.py  run_new_exp.py  utils.py
BBQ/COT/: distill_cot_Sexual_orientation.jsonl
COT/: distill_cot_Sexual_orientation.jsonl
MBBQ/: MBBQ_evaluation.py  answer_questions.py  dataset_preparation.py  deepseek_COT.py  distill-COT.py  judge.py  prompts.py  utils.py
MBBQ/COT/: deepseek_cot_Disability_status_en.jsonl  deepseek_cot_Disability_status_es.jsonl  deepseek_cot_Disability_status_nl.jsonl  deepseek_cot_Disability_status_tr.jsonl  deepseek_cot_Gender_identity_en.jsonl  deepseek_cot_Gender_identity_es.jsonl  deepseek_cot_Gender_identity_nl.jsonl  deepseek_cot_Gender_identity_tr.jsonl  deepseek_cot_Physical_appearance_en.jsonl  deepseek_cot_Physical_appearance_es.jsonl  deepseek_cot_Physical_appearance_nl.jsonl  deepseek_cot_Physical_appearance_tr.jsonl  deepseek_cot_Sexual_orientation_en.jsonl  deepseek_cot_Sexual_orientation_es.jsonl  deepseek_cot_Sexual_orientation_nl.jsonl  deepseek_cot_Sexual_orientation_tr.jsonl  distill_cot_Disability_status_en.jsonl  (+19 more)
(+112 files in other folders)
