[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.59",
    "langchain[openai]>=0.3.25",
    "marimo[recommended]>=0.13.6",
    "pandas>=2.2.3",
]
[tool.marimo.runtime]
dotenv = [".env"]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
