[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.59",
    "langchain-deepseek>=0.1.3",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "marimo[recommended]>=0.13.6",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "transformers>=4.30.0",
    "huggingface_hub>=0.16.4",
    "torch>=2.0.0",
    "accelerate>=0.21.0"


]
[tool.marimo.runtime]
dotenv = [".env"]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
